css/_display.css
/*

DISPLAY


*/

@mixin prefixes {
&block { display: block; }
&inline-block { display: inline-block; }
&inline { display: inline; }

&table { display: table; }
&table-cell {display: table-cell;}
}

blockquote {
	margin: 2em 0 2em 0;
	padding-left: 2em;
	border-left: 4px solid var(--gray01);
}

code {
    white-space: pre-wrap;
    word-wrap: break-word;
}

.highlight {
    padding: 2em;
}

pre {
	border-left: 4px solid var(--gray01);
	white-space: pre;
    margin-top: 2em;
    margin-bottom: 2em;
}

.middle { vertical-align: middle; }

.ulnone { list-style: none; margin: 0; padding: 0;}

.vh100 { height: 100vh; }
.h100 { height: 100%; }
.minh100 { min-height: 100%; }

